--- a/src/clash.yml
+++ b/src/clash.yml
@@ -177,7 +177,11 @@ Proxy Group:
 
 # select 用来允许用户手动选择 代理服务器 或 服务器组
 # 您也可以使用 RESTful API 去切换服务器，这种方式推荐在 GUI 中使用
-- { name: "Proxy", type: fallback, proxies: [], url: "https://www.bing.com", interval: 600 }
+- { name: "Proxy", type: fallback, proxies: [], url: "https://www.bing.com", interval: 300 }
+- { name: "阿根廷", type: fallback, proxies: [], url: "https://www.bing.com", interval: 300 }
+- { name: "菲律宾", type: fallback, proxies: [], url: "https://www.bing.com", interval: 300 }
+- { name: "印度", type: fallback, proxies: [], url: "https://www.bing.com", interval: 300 }
+- { name: "土耳其", type: fallback, proxies: [], url: "https://www.bing.com", interval: 300 }
 
 Rule:
 # Apple
